[package]
name = "zhiliao"
version = "0.1.0"
authors = ["sunguanke"]
edition = "2018"

[[bin]]
name = "zl"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
console = "0.14.1"
tokio = { version = "1", features = ["full"] }

